@@ -12,11 +12,13 @@
 #include <libart_lgpl/art_vpath.h>
 #include <libart_lgpl/art_svp.h>
 
+typedef float NRCoord;
+
 typedef struct _NRPoint NRPoint;
 
 struct _NRPoint {
-	gint32 x;
-	gint32 y;
+	float x;
+	float y;
 };
 
 typedef struct _NRLine NRLine;
@@ -34,14 +36,13 @@ struct _NRSVP {
 	NRLine * lines;
 };
 
-#define NR_COORD_FROM_ART(v) ((int) floor ((v) * 16.0 + 0.5))
-#define NR_COORD_TO_ART(v) (((double) (v)) / 16.0)
-#define NR_COORD_MUL(a,b) ((((a) >> 4) * (b)) + ((((a) & 0xf) * (b)) >> 4))
-#define NR_COORD_MUL_DIV(a,b,c) ((a) * (b) / (c))
+#define NR_COORD_FROM_ART(v) (rint ((v) * 16.0) / 16.0)
+#define NR_COORD_SNAP(v) (rint ((v) * 16.0) / 16.0)
+#define NR_COORD_TO_ART(v) (v)
 
 NRLine * nr_line_new (void);
-NRLine * nr_line_new_xyxy (gint32 x0, gint32 y0, gint32 x1, gint32 y1);
-NRLine * nr_line_new_xyxyd (gint32 x0, gint32 y0, gint32 x1, gint32 y1, gint direction);
+NRLine * nr_line_new_xyxy (NRCoord x0, NRCoord y0, NRCoord x1, NRCoord y1);
+NRLine * nr_line_new_xyxyd (NRCoord x0, NRCoord y0, NRCoord x1, NRCoord y1, gint direction);
 void nr_line_free (NRLine * line);
 void nr_line_free_list (NRLine * line);
 NRLine * nr_lines_reverse_list (NRLine * line);
